// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CountCard renders as expected when given count and title 1`] = `
<div
  className="CountCard"
>
  <span
    className="CountCard--TitleHeader"
  >
    Test Title
  </span>
  <span
    className="CountCard--Count"
  >
    108
  </span>
  <ExamplesLink
    includeText={true}
  />
</div>
`;

exports[`CountCard renders as expected when given count, title, and examples 1`] = `
<div
  className="CountCard"
>
  <span
    className="CountCard--TitleHeader"
  >
    Test Title
  </span>
  <span
    className="CountCard--Count"
  >
    108
  </span>
  <ExamplesLink
    examples={
      Array [
        "foo",
      ]
    }
    includeText={true}
  />
</div>
`;
